--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pci-mapper",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "vite build",
@@ -9,38 +9,50 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "update-deps": "npx npm-check-updates -u && npm install",
+    "force-install": "rm -rf node_modules package-lock.json && npm install",
+    "upgrade": "npm run update-deps && npm run build"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^8.56.5",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.56.0",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/adapter-firebase": "^0.4.3",
+    "@sveltejs/kit": "^2.7.4",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
+    "@types/eslint": "^8.56.15",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "eslint-plugin-svelte": "^2.49.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.11",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.1"
   },
   "type": "module",
   "dependencies": {
+    "@arcgis/core": "^4.32.0",
     "@arcgis/map-components": "^4.32.0",
     "@arcgis/map-components-react": "^4.32.0",
-    "@firebase/app": "^0.9.22",
-    "@firebase/auth": "^0.24.0",
-    "@firebase/firestore": "^4.12.0",
-    "@firebase/storage": "^0.10.0",
-    "firebase": "^10.11.0"
+    "@arcgis/webpack-plugin": "^4.32.0",
+    "@firebase/app": "^1.1.1",
+    "@firebase/auth": "^1.7.2",
+    "@firebase/firestore": "^5.3.1",
+    "@firebase/storage": "^1.0.0",
+    "firebase": "^11.1.0",
+    "svelte-arcgis": "^1.0.3"
   },
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
+  },
+  "overrides": {
+    "@arcgis/core": {
+      "typescript": "^5.7.2"
+    }
   }
 }
