--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
   "dependencies": {
     "@arcgis/core": "^4.32.0",
     "@arcgis/map-components": "^4.32.0",
-    "@arcgis/map-components-react": "^4.32.0",
     "@arcgis/webpack-plugin": "^4.32.0",
-    "firebase": "^11.1.0",
-    "svelte-arcgis": "^1.0.3"
+    "firebase": "^11.1.0"
   },
   "engines": {
     "node": ">=20.0.0",
@@ -50,11 +48,5 @@
     "@arcgis/core": {
       "typescript": "^5.7.2"
     }
-  },
-  "resolutions": {
-    "@firebase/app": "^1.1.1",
-    "@firebase/auth": "^1.7.2",
-    "@firebase/firestore": "^5.3.1",
-    "@firebase/storage": "^1.0.0"
   }
 }
