--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Firebase Functions for LTE PCI Conflict Mapper",
   "main": "lib/index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint src",
     "build": "tsc",
@@ -17,9 +18,9 @@
     "node": "18"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.8.0",
-    "cors": "^2.8.5"
+    "firebase-functions": "^6.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
