Add Wolfram Alpha API key configuration with environment variable support

--- a/env.example
+++ b/env.example
@@ -16,6 +16,9 @@ PUBLIC_ARCGIS_API_KEY=your-arcgis-api-key
 # Gemini AI Configuration
 PUBLIC_GEMINI_API_KEY=your-gemini-api-key
 
+# Wolfram Alpha Configuration
+PUBLIC_WOLFRAM_APP_ID=your-wolfram-app-id
+
 # Development Settings
 NODE_ENV=development
 PORT=5173
