--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^6.4.0"
+    "firebase-functions": "^6.4.0",
+    "mongodb": "^4.17.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
