Replace Leaflet with ArcGIS and rename to ACS
- Switched from Leaflet to ArcGIS Maps SDK
- Updated map implementation to use ArcGIS GraphicsLayer
- Renamed GenieACS to ACS throughout the module
- Updated module path from genieacs-cpe-management to acs-cpe-management
- Removed Leaflet dependency from package.json
- Added ArcGIS markers with status-based styling
- Integrated with existing ArcGIS infrastructure
- Professional ArcGIS basemap and styling

--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -16,8 +16,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "svelte": "^5.0.0",
     "firebase": "^11.1.0",
-    "@arcgis/core": "^4.33.0",
-    "leaflet": "^1.9.4"
+    "@arcgis/core": "^4.33.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
