Add complete GenieACS integration setup
COMPREHENSIVE GENIEACS INTEGRATION:

 Architecture:
CPE Devices (TR-069)  GenieACS Services  MongoDB  Firebase Functions  Firestore  ACS Module UI

 Complete Setup Documentation:
- COMPLETE_GENIEACS_SETUP.md: Full setup guide with systemd services
- setup-genieacs-services.sh: Automated installation script
- All GenieACS services configuration (CWMP, NBI, FS, UI)

 Firebase Functions Bridge:
- genieacsBridge.ts: Connects Firebase to running GenieACS instance
- Proxy functions for GenieACS NBI API
- Device sync from GenieACS to Firestore
- Real-time device parameter access
- Task execution on CPE devices
- Performance metrics collection

 Services to Enable:
- genieacs-cwmp (port 7547) - TR-069 protocol
- genieacs-nbi (port 7557) - REST API
- genieacs-fs (port 7567) - File server
- genieacs-ui (port 8080) - Web interface

 Integration Flow:
1. CPE devices connect to GenieACS CWMP service
2. GenieACS stores data in MongoDB
3. Firebase Functions bridge to GenieACS NBI
4. ACS module displays real CPE data and controls

 Ready for production deployment with full TR-069 support!

--- a/firebase.json
+++ b/firebase.json
@@ -11,8 +11,7 @@
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
-    "runtime": "nodejs20",
-    "generation": 2
+    "runtime": "nodejs20"
   },
   "apphosting": {
     "backendId": "pci-mapper",
