Add comprehensive npm deploy scripts for automatic GenieACS installation
 AUTOMATED DEPLOYMENT SCRIPTS:

 Package.json Scripts:
- deploy:genieacs - Install GenieACS services automatically
- deploy:functions - Deploy Firebase Functions
- deploy:hosting - Deploy web hosting
- deploy:complete - Full deployment orchestration
- deploy:all - Alias for complete deployment
- setup:genieacs - Run GenieACS setup script
- test:functions - Test Firebase Functions
- test:sync - Test GenieACS sync

 Deployment Scripts:
- deploy/genieacs-install.js - Automated GenieACS installation
- deploy/firebase-deploy.js - Firebase Functions deployment
- deploy/complete-deploy.js - Complete deployment orchestrator
- deploy/config.json - Deployment configuration
- deploy/README.md - Comprehensive documentation

 Features:
- Interactive prompts for server configuration
- Automatic dependency installation (Node.js, MongoDB)
- Systemd service creation and management
- Firewall configuration
- Service health checking
- Integration testing
- Error handling and rollback

 Usage Examples:
npm run deploy:complete    # Deploy everything
npm run deploy:genieacs    # Install GenieACS only
npm run deploy:functions   # Deploy Firebase Functions only

 Ready for production deployment with one command!

--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "format": "prettier --plugin-search-dir . --write .",
     "update-deps": "npx npm-check-updates -u && npm install",
     "force-install": "rm -rf node_modules package-lock.json && npm install",
-    "upgrade": "npm run update-deps && npm run build"
+    "upgrade": "npm run update-deps && npm run build",
+    "deploy:genieacs": "node deploy/genieacs-install.js",
+    "deploy:functions": "node deploy/firebase-deploy.js",
+    "deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "deploy:complete": "node deploy/complete-deploy.js",
+    "deploy:all": "npm run deploy:complete",
+    "setup:genieacs": "chmod +x setup-genieacs-services.sh && sudo ./setup-genieacs-services.sh",
+    "test:functions": "curl -X POST https://us-central1-lte-pci-mapper.cloudfunctions.net/initializeSamplePresets",
+    "test:sync": "curl -X POST https://us-central1-lte-pci-mapper.cloudfunctions.net/syncGenieACSDevices"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.2",
