--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -8,7 +8,10 @@
     "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "deploy": "npm run build && firebase deploy --only hosting",
+    "deploy:hosting": "npm run build && cd .. && firebase deploy --only hosting",
+    "deploy:complete": "cd .. && npm run deploy:complete"
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
