--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -9,9 +9,8 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:hosting": "npm run build && cd .. && firebase deploy --only hosting",
-    "deploy:complete": "cd .. && npm run deploy:complete"
+    "deploy": "chmod +x deploy-to-firebase.sh && ./deploy-to-firebase.sh",
+    "deploy:firebase": "npm run build && cd .. && firebase deploy --only hosting"
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
