--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
