--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,7 @@
   "functions": {
     "source": "functions",
     "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" install",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
     "runtime": "nodejs20"
