Rework deployment to use MongoDB npm driver v6.20 - Create centralized MongoDB connection handler using official npm package - Update to MongoDB Node.js Driver v6.20.0 from v4.17.2 - Add connection pooling optimized for Firebase Functions - Configure MongoDB Atlas connection string in apphosting.yaml files - Add password setup scripts for easy deployment - Create comprehensive MongoDB npm deployment guide - Implement singleton pattern for connection reuse - Add health checks and connection statistics - Update all GenieACS functions to use new connection handler - Reference: https://www.mongodb.com/docs/drivers/node/current/

--- a/apphosting.development.yaml
+++ b/apphosting.development.yaml
@@ -44,13 +44,14 @@ env:
   # ==========================================
   # MONGODB DEVELOPMENT DATABASE
   # ==========================================
-  - variable: MONGODB_DATABASE
-    value: "genieacs-dev"
+  # Development uses separate database on same cluster
+  - variable: MONGODB_URI
+    value: "mongodb+srv://genieacs-user:<db_password>@cluster0.1radgkw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
     availability:
       - RUNTIME
-
-  - variable: MONGODB_URI
-    secret: mongodb-dev-connection-url
+      
+  - variable: MONGODB_DATABASE
+    value: "genieacs-dev"
     availability:
       - RUNTIME
 
