--- a/apphosting.staging.yaml
+++ b/apphosting.staging.yaml
@@ -39,13 +39,14 @@ env:
   # ==========================================
   # MONGODB STAGING DATABASE
   # ==========================================
-  - variable: MONGODB_DATABASE
-    value: "genieacs-staging"
+  # Staging uses separate database on same cluster
+  - variable: MONGODB_URI
+    value: "mongodb+srv://genieacs-user:<db_password>@cluster0.1radgkw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
     availability:
       - RUNTIME
-
-  - variable: MONGODB_URI
-    secret: mongodb-staging-connection-url
+      
+  - variable: MONGODB_DATABASE
+    value: "genieacs-staging"
     availability:
       - RUNTIME
 
