Move build dependencies to dependencies for Firebase App Hosting - Move Vite, SvelteKit, and build tools from devDependencies to dependencies - Firebase App Hosting runs with NODE_ENV=production which skips devDependencies - This ensures build tools are available during deployment

--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "test:sync": "curl -X POST https://us-central1-lte-pci-mapper.cloudfunctions.net/syncGenieACSDevices"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.2",
-    "@sveltejs/kit": "^2.7.4",
-    "@sveltejs/vite-plugin-svelte": "^4.0.4",
     "@types/eslint": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
@@ -33,17 +30,20 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.46.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.2.6",
+    "prettier-plugin-svelte": "^3.2.6"
+  },
+  "type": "module",
+  "dependencies": {
+    "@arcgis/core": "^4.33.0",
+    "firebase": "^11.1.0",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/kit": "^2.7.4",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.11",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
-  },
-  "type": "module",
-  "dependencies": {
-    "@arcgis/core": "^4.33.0",
-    "firebase": "^11.1.0"
   },
   "engines": {
     "node": ">=20.0.0",
