--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,6 +2,10 @@
 # This is the base configuration that applies to all environments
 # Environment-specific overrides go in apphosting.[environment].yaml
 
+# Build and run commands
+buildCommand: npm install && npm run build
+runCommand: node build/index.js
+
 runConfig:
   # Production-grade resources
   cpu: 2
@@ -170,6 +174,11 @@ env:
     value: "production"
     availability:
       - BUILD
+      - RUNTIME
+
+  - variable: PORT
+    value: "8080"
+    availability:
       - RUNTIME
 
   - variable: PUBLIC_APP_URL
