Optimize Cloud Run resources for cost and stability - Reduced CPU from 2 to 1 (sufficient for web app) - Increased memory from 1GB to 2GB (needed for ArcGIS and startup) - Set minInstances to 0 (scale to zero, save costs during dev) - Reduced maxInstances from 10 to 5 (sufficient for initial deployment) - Fixes potential startup memory issues

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -7,12 +7,12 @@ buildCommand: npm install && npm run build
 runCommand: node build/index.js
 
 runConfig:
-  # Production-grade resources
-  cpu: 2
-  memoryMiB: 1024
-  minInstances: 1  # Keep at least 1 instance warm for production
-  maxInstances: 10
-  concurrency: 100
+  # Optimized for SvelteKit + ArcGIS
+  cpu: 1                # 1 CPU is sufficient for most web apps
+  memoryMiB: 2048       # 2 GB - needed for ArcGIS and startup stability
+  minInstances: 0       # Scale to zero when idle (saves cost during dev/testing)
+  maxInstances: 5       # Sufficient for initial deployment
+  concurrency: 80       # Standard concurrency per instance
 
 env:
   # ==========================================
