CRITICAL FIX: Deploy Module Manager instead of root app - Changed firebase.json rootDir from / to /Module_Manager - Updated Module_Manager to use adapter-node for Cloud Run - Added Procfile and start script to Module_Manager - Copied apphosting.yaml to Module_Manager - This fixes browser showing wrong app (old PCI manager vs new Module Manager)

--- a/firebase.json
+++ b/firebase.json
@@ -15,8 +15,8 @@
     "runtime": "nodejs20"
   },
   "apphosting": {
-    "backendId": "pci-mapper",
-    "rootDir": "/",
+    "backendId": "lte-pci-mapper",
+    "rootDir": "/Module_Manager",
     "ignore": [
       "node_modules",
       ".git",
