Prevent confusion: Rename old standalone app to clearly mark as deprecated - Renamed /src to /src-OLD-standalone-pci-DEPRECATED - Added README_DEPRECATED.md explaining it should not be used - Updated root package.json to delegate to Module_Manager - Updated README.md with clear project structure - This prevents accidentally deploying wrong app again

--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "pci-mapper",
-  "version": "1.0.0",
+  "name": "lte-pci-mapper",
+  "version": "2.0.0",
   "private": true,
+  "description": "LTE WISP Management Platform - Module Manager System",
   "scripts": {
-    "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
-    "start": "node build/index.js",
-    "dev": "vite dev",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "build": "cd Module_Manager && npm install && node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
+    "start": "cd Module_Manager && node build/index.js",
+    "dev": "cd Module_Manager && npm run dev",
+    "preview": "cd Module_Manager && npm run preview",
+    "check": "cd Module_Manager && npm run check",
+    "check:watch": "cd Module_Manager && npm run check:watch",
     "lint": "eslint .",
     "format": "prettier --plugin-search-dir . --write .",
-    "update-deps": "npx npm-check-updates -u && npm install",
-    "force-install": "rm -rf node_modules package-lock.json && npm install",
-    "upgrade": "npm run update-deps && npm run build",
     "deploy:genieacs": "node deploy/genieacs-install.js",
-    "deploy:functions": "node deploy/firebase-deploy.js",
-    "deploy:hosting": "npm run build && firebase deploy --only hosting",
-    "deploy:complete": "node deploy/complete-deploy.js",
-    "deploy:all": "npm run deploy:complete",
+    "deploy:functions": "firebase deploy --only functions",
+    "deploy:apphosting": "firebase deploy --only apphosting",
+    "deploy:all": "firebase deploy",
     "setup:genieacs": "chmod +x setup-genieacs-services.sh && sudo ./setup-genieacs-services.sh",
     "test:functions": "curl -X POST https://us-central1-lte-pci-mapper.cloudfunctions.net/initializeSamplePresets",
     "test:sync": "curl -X POST https://us-central1-lte-pci-mapper.cloudfunctions.net/syncGenieACSDevices"
