Fix build memory and deployment issues
- Increase Node memory to 4GB for build process

- Prevents out-of-memory during JS bundling

- Update firebase.json ignore patterns

- Fixes 404 errors for JavaScript bundle files

--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -3,7 +3,7 @@
 # Environment-specific overrides go in apphosting.[environment].yaml
 
 # Build and run commands
-buildCommand: npm install && npm run build
+buildCommand: npm install && NODE_OPTIONS="--max-old-space-size=4096" npm run build
 runCommand: node build/index.js
 
 runConfig:
