--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,9 @@
       ".git",
       "firebase-debug.log",
       "firebase-debug.*.log",
-      "functions"
+      "functions",
+      "src",
+      "static"
     ]
   }
 }
