Add custom Express server with explicit static file serving
- Created server.js with debug logging and explicit static file serving

- Serves build/client directory explicitly via Express

- Added hooks.server.ts for proper cache headers

- Fixes 404 errors for JavaScript bundle files

- Logs directory structure on startup for debugging

--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -4,7 +4,7 @@
 
 # Build and run commands
 buildCommand: npm install && NODE_OPTIONS="--max-old-space-size=4096" npm run build
-runCommand: node build/index.js
+runCommand: node server.js
 
 runConfig:
   # Optimized for SvelteKit + ArcGIS
