--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
-    "start": "node build/index.js",
+    "start": "node server.js",
+    "start:original": "node build/index.js",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -19,7 +20,8 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "svelte": "^5.0.0",
     "firebase": "^11.1.0",
-    "@arcgis/core": "^4.33.0"
+    "@arcgis/core": "^4.33.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
