--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
+    "build": "node --max-old-space-size=6144 node_modules/vite/bin/vite.js build",
+    "build:check": "npm run build && ls -lh build/client/_app/immutable/entry/",
     "start": "node server.js",
     "start:original": "node build/index.js",
     "preview": "vite preview",
