Add MongoDB-backed CRUD operations for Presets and Faults
Created full MongoDB integration for GenieACS data management:

New Backend Functions (MongoDB):
==================================

Presets Management:
- getMongoPresets: Fetch all presets from MongoDB
- createMongoPreset: Create new preset
- updateMongoPreset: Edit existing preset (NEW!)
- deleteMongoPreset: Delete preset
- toggleMongoPreset: Enable/disable preset

Faults Management:
- getMongoFaults: Fetch all faults from MongoDB
- getMongoFault: Get single fault details
- acknowledgeMongoFault: Acknowledge and resolve fault (NEW!)
- deleteMongoFault: Delete fault (NEW!)
- createMongoFault: Create new fault
- deleteResolvedMongoFaults: Bulk cleanup resolved faults

Features:
- Full CRUD operations for both Presets and Faults
- MongoDB Atlas integration using mongoConnection.ts
- Proper error handling and validation
- Query filtering (severity, status, limit)
- Timestamps for created/updated dates
- Fallback to Firestore versions if MongoDB unavailable

Environment Variables Added:
- PUBLIC_GET_MONGO_PRESETS_URL
- PUBLIC_CREATE_MONGO_PRESET_URL
- PUBLIC_UPDATE_MONGO_PRESET_URL
- PUBLIC_DELETE_MONGO_PRESET_URL
- PUBLIC_TOGGLE_MONGO_PRESET_URL
- PUBLIC_GET_MONGO_FAULTS_URL
- PUBLIC_ACKNOWLEDGE_MONGO_FAULT_URL
- PUBLIC_DELETE_MONGO_FAULT_URL
- PUBLIC_CREATE_MONGO_FAULT_URL

Files Added:
- functions/src/mongoPresetsManagement.ts
- functions/src/mongoFaultsManagement.ts

Files Modified:
- functions/src/index.ts (export new functions)
- apphosting.yaml (add environment variables)

Next step: Update frontend to use these MongoDB endpoints

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -108,6 +108,62 @@ env:
       - BUILD
       - RUNTIME
 
+  # MongoDB-backed Presets Management
+  - variable: PUBLIC_GET_MONGO_PRESETS_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/getMongoPresets"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_CREATE_MONGO_PRESET_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/createMongoPreset"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_UPDATE_MONGO_PRESET_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/updateMongoPreset"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_DELETE_MONGO_PRESET_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/deleteMongoPreset"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_TOGGLE_MONGO_PRESET_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/toggleMongoPreset"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  # MongoDB-backed Faults Management
+  - variable: PUBLIC_GET_MONGO_FAULTS_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/getMongoFaults"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_ACKNOWLEDGE_MONGO_FAULT_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/acknowledgeMongoFault"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_DELETE_MONGO_FAULT_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/deleteMongoFault"
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: PUBLIC_CREATE_MONGO_FAULT_URL
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/createMongoFault"
+    availability:
+      - BUILD
+      - RUNTIME
+
   # ==========================================
   # ARCGIS CONFIGURATION
   # ==========================================
