--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,7 @@
   "apphosting": {
     "backendId": "lte-pci-mapper",
     "rootDir": "/Module_Manager",
+    "deployFunctions": true,
     "ignore": [
       "node_modules",
       ".git",
