--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -4,7 +4,13 @@
 
 # Build and run commands
 # Using 6GB heap for build to handle ArcGIS + Firebase + SvelteKit bundling
-buildCommand: npm install && NODE_OPTIONS="--max-old-space-size=6144" npm run build && ls -lh build/client/_app/immutable/entry/ || echo "⚠️  Build directory check failed"
+# Also deploys Firebase Functions automatically during build
+buildCommand: |
+  npm install -g firebase-tools &&
+  cd ../functions && npm install && npm run build && cd ../Module_Manager &&
+  firebase deploy --only functions --project lte-pci-mapper-65450042-bbf71 --non-interactive --force &&
+  npm install && NODE_OPTIONS="--max-old-space-size=6144" npm run build &&
+  ls -lh build/client/_app/immutable/entry/ || echo "⚠️  Build directory check failed"
 runCommand: node server.js
 
 runConfig:
