Rename workflow to 'Auto-Deploy Functions' for clarity

--- a/.github/workflows/deploy-functions-service-account.yml
+++ b/.github/workflows/deploy-functions-service-account.yml
@@ -2,7 +2,7 @@
 # Uses Service Account authentication - fully automatic, no manual login required
 # Triggers on push to main branch
 
-name: Deploy Firebase Functions (Production)
+name: Auto-Deploy Functions
 
 on:
   push:
