--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -22,7 +22,8 @@
     "svelte": "^5.0.0",
     "firebase": "^11.1.0",
     "@arcgis/core": "^4.33.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.20.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
