Fix build configuration for SvelteKit API routes
Changes to fix Cloud Build error:

1. apphosting.yaml:
   - Changed MONGODB_URI availability to BUILD + RUNTIME
   - Changed MONGODB_DATABASE availability to BUILD + RUNTIME
   - Needed at build time for SvelteKit to validate imports

2. hooks.server.ts (NEW):
   - Added CORS headers for API routes
   - Handles preflight OPTIONS requests
   - Ensures API routes accessible from all origins
   - Prevents CORS errors

SvelteKit Environment Variables:
=================================
For \/static/private imports to work:
- Variables must be available at BUILD time
- SvelteKit validates imports during build
- RUNTIME-only variables cause build failures

API Routes Enhancement:
=======================
- Added proper CORS handling
- OPTIONS method support for preflight
- Wildcard origin for development
- Can be restricted in production

Build Process:
==============
Build time: Environment vars validated
Runtime: MongoDB connections established

This fixes the Cloud Build error and enables proper
SvelteKit API route deployment! âœ…

--- a/Module_Manager/apphosting.yaml
+++ b/Module_Manager/apphosting.yaml
@@ -144,11 +144,13 @@ env:
   - variable: MONGODB_URI
     value: "mongodb+srv://genieacs-user:5UDFrunhXI8FfqPZ@cluster0.1radgkw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
     availability:
+      - BUILD
       - RUNTIME
 
   - variable: MONGODB_DATABASE
     value: "genieacs"
     availability:
+      - BUILD
       - RUNTIME
 
   # ==========================================
