--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -24,8 +24,7 @@
     "@arcgis/core": "^4.33.0",
     "express": "^4.18.2",
     "mongodb": "^6.20.0",
-    "chart.js": "^4.4.1",
-    "svelte-chartjs": "^3.1.5"
+    "chart.js": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
