--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -3,9 +3,9 @@
 # Environment-specific overrides go in apphosting.[environment].yaml
 
 # Build and run commands
-# Build runs from /Module_Manager directory due to rootDir setting in firebase.json
-buildCommand: npm install && npm run check && npm run build
-runCommand: node build/index.js
+# Using 6GB heap for build to handle ArcGIS + Firebase + SvelteKit bundling
+buildCommand: npm install && NODE_OPTIONS="--max-old-space-size=6144" npm run build && ls -lh build/client/_app/immutable/entry/ || echo "⚠️  Build directory check failed"
+runCommand: node server.js
 
 runConfig:
   # Optimized for SvelteKit + ArcGIS
