--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,9 +2,12 @@
 # This is the base configuration that applies to all environments
 # Environment-specific overrides go in apphosting.[environment].yaml
 
+# Root directory where the app code is located
+rootDirectory: Module_Manager
+
 # Build and run commands
 # Using 6GB heap for build to handle ArcGIS + Firebase + SvelteKit bundling
-buildCommand: npm install && NODE_OPTIONS="--max-old-space-size=6144" npm run build && ls -lh build/client/_app/immutable/entry/ || echo "⚠️  Build directory check failed"
+buildCommand: npm install && npx svelte-kit sync && NODE_OPTIONS="--max-old-space-size=6144" npm run build && ls -lh build/client/_app/immutable/entry/ || echo "⚠️  Build directory check failed"
 runCommand: node server.js
 
 runConfig:
