--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -1,8 +1,4 @@
-# GitHub Actions - Automatically Deploy Firebase Functions
-# Runs whenever you push to main branch
-# No CLI access needed - runs in GitHub cloud
-
-name: Deploy Firebase Functions
+name: Deploy Cloud Functions
 
 on:
   push:
@@ -10,13 +6,10 @@ on:
       - main
     paths:
       - 'functions/**'
-      - 'apphosting.yaml'
-      - 'Module_Manager/apphosting.yaml'
       - '.github/workflows/deploy-functions.yml'
 
 jobs:
-  deploy:
-    name: Deploy Functions to Firebase
+  deploy-functions:
     runs-on: ubuntu-latest
     
     steps:
@@ -27,33 +20,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'functions/package-lock.json'
 
-      - name: Install Functions dependencies
-        run: |
-          cd functions
-          npm ci
+      - name: Install dependencies
+        working-directory: ./functions
+        run: npm ci
 
-      - name: Build Functions (TypeScript)
-        run: |
-          cd functions
-          npm run build
+      - name: Build Functions
+        working-directory: ./functions
+        run: npm run build
 
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only functions
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Deploy Cloud Functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: lte-pci-mapper-65450042-bbf71
-
-      - name: Verify Deployment
         run: |
-          echo "✅ Functions deployed successfully!"
-          echo "Test URL: https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/checkMongoHealth"
+          echo "☁️  Deploying Cloud Functions..."
+          firebase deploy --only functions --project lte-pci-mapper-65450042-bbf71 --token "$FIREBASE_TOKEN"
 
-      - name: Comment on Commit
-        if: success()
+      - name: Deployment Success
         run: |
-          echo "✅ Firebase Functions deployed successfully from commit ${{ github.sha }}"
+          echo "✅ Cloud Functions deployed successfully!"
