--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 # Cloud Build Configuration
-# Automatically deploys Firebase Functions when code is pushed to Git
+# Automatically deploys Firebase components when code is pushed to Git
 # Firebase will run this automatically when connected to your repository
 
 steps:
@@ -8,19 +8,32 @@ steps:
     entrypoint: 'npm'
     args: ['install', '-g', 'firebase-tools']
 
-  # Step 2: Install Functions dependencies
+  # Step 2: Deploy Firestore Rules (if changed)
+  - name: 'node:20'
+    entrypoint: 'npx'
+    args: [
+      'firebase-tools',
+      'deploy',
+      '--only', 'firestore:rules,firestore:indexes',
+      '--project', '$PROJECT_ID',
+      '--token', '${_FIREBASE_TOKEN}'
+    ]
+    env:
+      - 'FIREBASE_TOKEN=${_FIREBASE_TOKEN}'
+
+  # Step 3: Install Functions dependencies
   - name: 'node:20'
     entrypoint: 'npm'
     dir: 'functions'
     args: ['install']
 
-  # Step 3: Build Functions (TypeScript)
+  # Step 4: Build Functions (TypeScript)
   - name: 'node:20'
     entrypoint: 'npm'
     dir: 'functions'
     args: ['run', 'build']
 
-  # Step 4: Deploy Functions
+  # Step 5: Deploy Functions
   - name: 'node:20'
     entrypoint: 'npx'
     args: [
